# mmsheet

./: Cargo.toml  README.md
data/: advantages.csv  advantages.json  powers.json
src/: character.rs  gui.rs  main.rs  rulebook.rs
static/: style.css
