[package]
name = "mmdeoxus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
dioxus = "0.3.2"
dioxus-desktop = "0.3.0"
indexmap = "2.0.0"
lazy_static = "1.4.0"
native-dialog = "0.6.4"
serde = { version = "1.0.174", features = ["derive"] }
serde_json = { version = "1.0.103", features = ["preserve_order"] }
